<resources>
    <string name="app_name">MyBolaSepak</string>
    <string name="step_counter">0 Step Today</string>
    <string name="date_example">01 Januari 2020</string>
    <string name="versus">vs</string>
    <string name="zero">0</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="shot">Shot</string>
    <string name="team_a_logo">team a logo</string>
    <string name="team_b_logo">team b logo</string>
    <string name="goals">Goals</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscribe">Subscribe</string>
</resources>
