<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MatchInfo">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/date_event_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/date_example"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/image_team_a"
            app:layout_constraintEnd_toStartOf="@id/image_team_b"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/image_team_a"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/team_a_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_launcher_background"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/text_name_team_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/image_team_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_team_a" />

        <TextView
            android:id="@+id/score_team_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/zero"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/text_vs"
            app:layout_constraintTop_toBottomOf="@id/date_event_detail"
            app:layout_constraintStart_toEndOf="@id/image_team_a"
            app:layout_constraintVertical_bias="0.672" />

        <TextView
            android:id="@+id/text_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/versus"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/date_event_detail"
            app:layout_constraintEnd_toStartOf="@+id/score_team_b"
            app:layout_constraintStart_toEndOf="@+id/score_team_a" />

        <TextView
            android:id="@+id/score_team_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/zero"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/text_vs"
            app:layout_constraintTop_toBottomOf="@id/date_event_detail"
            app:layout_constraintEnd_toStartOf="@id/image_team_b"/>

        <ImageView
            android:id="@+id/image_team_b"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/team_b_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_launcher_background"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/text_name_team_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_b"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/image_team_b"
            app:layout_constraintStart_toStartOf="@+id/image_team_b"
            app:layout_constraintTop_toBottomOf="@+id/image_team_b" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>